--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
     <!-- Create and link a CSS file! -->
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <h1>Week 4 Assignment - Part 2</h1>
+  <header>
+    Week 4 Assignment - Part 2
     <p>Check console for errors.</p>
+  </header>
+<div class='info'>
+  My name is John Idso.
+</div>
+  <body>
+    <img src="https://img.autobytel.com/2014/honda/cr-v/3-376-060314%20honda%20crv%202014-72340.jpg" title="2014 Honda CR-V" />
+    <h3>I drive a Honda CR-V</h3>
   </body>
 </html>
