--- a/assignment/index.html
+++ b/assignment/index.html
@@ -14,7 +14,7 @@
   My name is John Idso.
 </div>
   <body>
-    <img src="https://img.autobytel.com/2014/honda/cr-v/3-376-060314%20honda%20crv%202014-72340.jpg" title="2014 Honda CR-V" />
+    <img src="https://img.autobytel.com/2014/honda/cr-v/3-376-060314%20honda%20crv%202014-72340.jpg" title="2014 Honda CR-V" class="img" />
     <h3>I drive a Honda CR-V</h3>
   </body>
 </html>
