--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <header>
-    Week 4 Assignment - Part 2
+    <h1>Week 4 Assignment - Part 2</h1>
     <p>Check console for errors.</p>
   </header>
 <div class='info'>
-  My name is John Idso.
+  <h2>My name is John Idso.</h2>
 </div>
   <body>
     <img src="https://img.autobytel.com/2014/honda/cr-v/3-376-060314%20honda%20crv%202014-72340.jpg" title="2014 Honda CR-V" class="img" />
